--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,9 @@
+# escape=`
+
+# How to build image
+#  docker build --pull --rm -f ".devcontainer\Dockerfile" -t trygithubcodespaces:latest ".devcontainer"
+# How to run 
+#  docker run --rm -it  trygithubcodespaces:latest
 # See here for image contents: https://github.com/microsoft/vscode-dev-containers/tree/v0.233.0/containers/dotnet/.devcontainer/base.Dockerfile
 
 # [Choice] .NET version: 6.0, 5.0, 3.1, 6.0-bullseye, 5.0-bullseye, 3.1-bullseye, 6.0-focal, 5.0-focal, 3.1-focal
@@ -14,3 +20,17 @@ RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/
 
 # [Optional] Uncomment this line to install global node packages.
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
+
+SHELL ["/bin/bash", "-c"]
+RUN wget https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/posh-linux-amd64 -O /usr/local/bin/oh-my-posh
+RUN chmod +x /usr/local/bin/oh-my-posh
+
+USER vscode
+RUN mkdir ~/.poshthemes
+RUN wget https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/themes.zip -O ~/.poshthemes/themes.zip
+RUN unzip ~/.poshthemes/themes.zip -d ~/.poshthemes
+RUN chmod u+rw ~/.poshthemes/*.json
+RUN rm ~/.poshthemes/themes.zip
+
+# RUN eval "$(oh-my-posh init bash --config ~/.jandedobbeleer.omp.json)"
+# ENTRYPOINT /bin/bash -c eval "$(oh-my-posh init bash --config ~/.jandedobbeleer.omp.json)"
