--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
-		"editor.fontFamily": "Consolas, 'Courier New', monospace, 'UDEV Gothic NF'",
+		"editor.fontFamily": "Consolas, 'Courier New', monospace",
 		"terminal.integrated.defaultProfile.windows": "PowerShell"
 	},
 
@@ -28,7 +28,7 @@
 		"donjayamanne.githistory",
 		"GitHub.vscode-pull-request-github",
 		"eamodio.gitlens",
-		"MS-CEINTL.vscode-language-pack-ja",
+		// "MS-CEINTL.vscode-language-pack-ja",
 		"ms-toolsai.jupyter",
 		"MS-vsliveshare.vsliveshare",
 		"yzhang.markdown-all-in-one",
@@ -36,7 +36,7 @@
 		"ms-vscode.powershell",
 		"ms-python.vscode-pylance",
 		"ms-python.python",
-		"ms-vscode-remote.vscode-remote-extensionpack",
+		// "ms-vscode-remote.vscode-remote-extensionpack",
 		"humao.rest-client",
 		"shuworks.vscode-table-formatter",
 		"vscode-icons-team.vscode-icons"
